--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             href="https://bootswatch.com/4/minty/bootstrap.min.css"
         />
         
-        <title>React App</title>
+        <title>Bacon Ipsum Text Generator</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
